rename mongo container to airflow_mongo

--- a/.docker/mongo.compose.yaml
+++ b/.docker/mongo.compose.yaml
@@ -1,7 +1,7 @@
 services:
   mongo:
     image: mongo
-    container_name: mongo-crawler
+    container_name: airflow_mongo
     ports:
       - 27017:27017
     environment:
