--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ async-timeout==4.0.2
 asynctest==0.13.0
 attrs==23.1.0
 Babel==2.12.1
+beautifulsoup4==4.12.2
 blinker==1.6.2
 cached-property==1.5.2
 cachelib==0.9.0
@@ -110,6 +111,7 @@ rich-argparse==1.2.0
 setproctitle==1.3.2
 six==1.16.0
 sniffio==1.3.0
+soupsieve==2.4.1
 SQLAlchemy==1.4.49
 SQLAlchemy-JSONField==1.0.1.post0
 SQLAlchemy-Utils==0.41.1
